@@ -21,6 +21,16 @@
 </tr>
 </table>
 <p>
+2008-09-13  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
+
+<UL>
+  <LI> magick/command.c (ConvertImageCommand): Provide 'convert' access
+        to MotionBlurImage() via -motion-blur option.
+        (MogrifyImageCommand): Provide 'mogrify' access to
+        MotionBlurImage() via -motion-blur option.
+
+</UL>
+<p>
 2008-09-12  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
