@@ -352,7 +352,7 @@
 <P>
 </P>
 <h2><a name="motionblurimage">MotionBlurImage</a></h2>
-<blockquote>MotionBlurImage() simulates motion blur. We convolve the image with a Gaussian operator of the given radius and standard deviation ( sigma ) . For reasonable results, radius should be larger than sigma. Use a radius of 0 and MotionBlurImage ( ) selects a suitable radius for you. Angle gives the angle of the blurring motion. </blockquote><P>Andrew Protano contributed this effect.</P>
+<blockquote>MotionBlurImage() simulates motion blur. We convolve the image with a Gaussian operator of the given radius and standard deviation ( sigma ) . For reasonable results, radius should be larger than sigma. Use a radius of 0 and MotionBlurImage ( ) selects a suitable radius for you. Angle gives the angle of the blurring motion ( direction object appears to be coming from ) . </blockquote><P>Andrew Protano contributed this effect.</P>
 <P>The format of the MotionBlurImage method is:</P>
 <blockquote><A HREF="types.html#Image">Image</A> *MotionBlurImage ( const <A HREF="types.html#Image">Image</A> *image, const double radius, const double sigma, const double angle, <A HREF="types.html#ExceptionInfo">ExceptionInfo</A> *exception ); </blockquote><P>A description of each parameter follows:</P>
 <dl>
